// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressResults/> should render no results 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  margin-bottom: 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c9 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c9:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c9[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c9[aria-pressed="true"]:not([disabled]):hover,
.c9[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c9[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c9[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c9 + .c8 {
  margin-left: 1rem;
}

.c10 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c10:not([disabled]):hover,
.c10:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c10:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c10[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c10[aria-pressed="true"]:not([disabled]):hover,
.c10[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c10[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c10[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c10 + .c8 {
  margin-left: 1rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c4 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c5 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          Nous n’avons pas trouvé de résultat pour votre recherche.
        </div>
        <div
          class="c0"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <h3
                class="c6"
              >
                Avez-vous trouvé la réponse à votre question ?
              </h3>
              <p
                class="c7"
              >
                <button
                  aria-pressed="false"
                  class="c8 c9"
                >
                  Non
                </button>
                <button
                  aria-pressed="false"
                  class="c8 c10"
                >
                  Oui
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AddressResults/> should render results 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c10 > *:first-child {
  margin-top: 0;
}

.c10 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  margin: 0 calc(1.25rem * -1);
  padding: 0;
}

.c4 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 1.25rem;
  padding: 1rem;
  width: calc(100% / 3 - 2 * 1.25rem);
  list-style-type: none;
  background-color: white;
}

.c11 {
  margin-bottom: 1rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c14 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c14:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c14[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c14[aria-pressed="true"]:not([disabled]):hover,
.c14[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c14[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c14[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c14 + .c13 {
  margin-left: 1rem;
}

.c15 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c15:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c15[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c15[aria-pressed="true"]:not([disabled]):hover,
.c15[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c15[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c15[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c15 + .c13 {
  margin-left: 1rem;
}

.c5 {
  font-size: 1rem;
}

.c6 {
  display: block;
  font-size: 0.9em;
  line-height: 1.5;
  margin: 1rem 0;
}

.c6:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(100,100,100,0.9);
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:visited {
  color: rgba(100,100,100,0.8);
}

.c7 {
  font-size: 0.9em;
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

.c8 {
  font-size: 0.9em;
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c9 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c10 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c10 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:980px) {
  .c4 {
    width: calc(100% / 2 - 2 * 1.25rem);
  }
}

@media (max-width:600px) {
  .c4 {
    width: calc(100% - 1 * 1.25rem);
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="c3"
        >
          <li
            class="c4"
          >
            <strong
              class="c5"
            >
              Bureau des légendes
            </strong>
            <a
              class="c6"
              href="https://www.openstreetmap.org/?mlat=4&mlon=44&zoom=16"
            >
              adresse inconnue
              <br />
              00700
               
              Partout
            </a>
            <p
              class="c7"
            >
              Tél: 
              <a
                href="tel:+00 000 000 000"
              >
                +00 000 000 000
              </a>
            </p>
            <a
              class="c8"
              href="mailto:email"
            >
              email
            </a>
          </li>
        </ul>
        <div
          class="c0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <h3
                class="c11"
              >
                Avez-vous trouvé la réponse à votre question ?
              </h3>
              <p
                class="c12"
              >
                <button
                  aria-pressed="false"
                  class="c13 c14"
                >
                  Non
                </button>
                <button
                  aria-pressed="false"
                  class="c13 c15"
                >
                  Oui
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
